--- a/src/index.css
+++ b/src/index.css
@@ -100,7 +100,13 @@
       @apply grid grid-cols-1 gap-5 xs:grid-cols-2 md:grid-cols-3 lg:grid-cols-4;
     }
   }
+  .popular-movies {
+    @apply space-y-9;
 
+    & ul {
+      @apply grid grid-cols-1 gap-5 xs:grid-cols-2 md:grid-cols-3 lg:grid-cols-4;
+    }
+  }
   .movie-card {
     @apply bg-dark-100 p-5 rounded-2xl shadow-inner shadow-light-100/10;
 
@@ -159,4 +165,12 @@
   &::-webkit-scrollbar {
     display: none;
   }
+}
+/* Tailwind can't handle this natively */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
 }
